--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,47 @@
 @import './libs/normalize.css';
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   padding-block: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #e3d9ed;
+}
+
+.wrapper {
+  position: relative;
+  width: 1280px;
+}
+#timer {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 32px;
+  color: #f60059;
+  z-index: 1000;
+}
+
+#bullets-ammount {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 32px;
+  color: #f60059;
+  z-index: 1000;
+}
+
+#start-new-game {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: black;
+  border: 2px solid #298ad3;
+  color: #298ad3;
+  text-transform: uppercase;
+  border-radius: 50px;
 }
